[package]
name = "hs-utils"
version = "0.2.7"
edition = "2021"

[features]
db = ["dep:sqlx"]
web = ["dep:actix-web", "dep:actix-service", "dep:actix-http", "dep:futures-util"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls"], optional = true }
actix-web = { version = "4", optional = true }
actix-service = { version = "2", optional = true }
actix-http = { version = "3", optional = true }
futures-util = { version = "0.3", optional = true }
